# Tiny-Aya-Under-the-hood

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
analysis/cross_lingual_embedding_alignment/: 01_data_preparation.ipynb  02_activation_extraction.ipynb  03_cross_lingual_cka.ipynb  04_language_family_clustering.ipynb  05_anisotropy_whitened_cka.ipynb  06_retrieval_alignment.ipynb  07_script_decomposition.ipynb  08_regional_comparison.ipynb  09_cross_model_drift.ipynb  paperback.md
analysis/layer_sensitivity_profiling/: tiny_aya_sensitivity_analysis.ipynb
linear_proping/datasets/: pos_probing_data.json
linear_proping/notebooks/: 01_data_preparation.ipynb  language_id_probing_data.json
notebooks/: 01_data_preparation.ipynb  02_activation_extraction.ipynb  03_cross_lingual_cka.ipynb  04_language_family_clustering.ipynb  05_anisotropy_whitened_cka.ipynb  06_retrieval_alignment.ipynb  07_script_decomposition.ipynb  08_regional_comparison.ipynb
src/analysis/cross_lingual_embedding_alignment/: cka.py  cross_lingual_alignment.py  visualization.py
src/analysis/layer_sensitivity_profiling/: __init__.py  sensitivity_utils.py
tests/: __init__.py  test_cka.py  test_hooks.py  test_languages.py  test_retrieval.py
uth/: __init__.py
uth/ablation_study/: METRICS_GUIDE.md  README.md  runner.py
uth/analysis/: __init__.py  cka.py  clustering.py  cross_lingual_alignment.py  hooks.py  retrieval_metrics.py  visualization.py
uth/data/: flores_loader.py  generate_linguistic_variation.py
uth/utils/: __init__.py  languages.py
