[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tiny-aya-uth"
version = "0.1.0"
description = "Tiny Aya Under The Hood — Multilingual representation analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "datasets>=2.18",
    "huggingface-hub>=0.20",
    "accelerate>=0.28",
    "numpy>=1.24",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "tqdm>=4.65",
    "python-dotenv>=1.0",
    "pandas>=2.0",
    "ipywidgets>=8.0",
    "bitsandbytes>=0.43",
    "ipykernel>=6.0",
]

[project.optional-dependencies]
notebooks = ["jupyter>=1.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]
all = ["tiny-aya-uth[notebooks,dev]"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["uth"]
